[package]
name = "aiusage"
version = "0.1.0"
edition = "2021"
description = "Claude & Codex usage TUI"

[dependencies]
tokio     = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs"] }
ratatui   = "0.29"
crossterm = "0.28"
reqwest   = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
chrono    = { version = "0.4", features = ["serde", "clock"] }
anyhow    = "1"

[profile.release]
opt-level = 2
